@@ -1,3 +1,7 @@
+2006-01-21 04:30:48  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Darwin/OS X requires sys/types.h to be included before regex.h.
+
 2006-01-21 03:14:56  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Make all accept()ed sockets non-blocking.
